<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/main"
        android:layout_width="170dp"
        android:layout_height="59dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rectangle1"
        android:backgroundTint="#F1F3FA"
        android:gravity="center|top"
        android:text="@string/main"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/main1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/main1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/main"
        app:layout_constraintStart_toStartOf="@+id/main"
        app:layout_constraintTop_toBottomOf="@+id/motivation" />

    <Button
        android:id="@+id/smart"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#F1F3FA"
        android:text="See Your Own Program"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle1"

        android:backgroundTint="#F1F3FA"
        android:gravity="center|left"
        android:text="@string/androidSwitch1"
        android:textColor="#000000"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/motivation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/motivation"
        android:layout_width="350dp"
        android:layout_height="174dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#DDF2FF"
        android:text="@string/motivaton"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dormitory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createown"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F1F3FA"
        android:text="@string/own"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/smart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/homeinfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/info" />

    <ImageView
        android:id="@+id/homeprofile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeinfo"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/hometrack"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/hometrack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeinfo"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/chart" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="87dp"
        android:layout_height="47dp"
        android:showText="true"
        android:text="@string/androidSwitch"
        android:textAlignment="textEnd"
        android:textColor="#0D628C"
        android:textOff="@string/androidSwitch1"
        android:textOn="@string/androidSwitch2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        app:thumbTint="@color/black"
        app:trackTint="@color/blue"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/dormitory"
        android:layout_width="170dp"
        android:layout_height="59dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rectangle1"
        android:backgroundTint="#F1F3FA"
        android:gravity="center|top"
        android:text="@string/dormitory"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toStartOf="@+id/main"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dormitory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/dormitory1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/dormitory"
        app:layout_constraintStart_toStartOf="@+id/dormitory"
        app:layout_constraintTop_toBottomOf="@+id/motivation" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="350dp"
        android:layout_height="162dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangle1"
        android:backgroundTint="#DDF2FF"
        android:gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/createown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="136dp"
        android:layout_height="163dp"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28"
        app:srcCompat="@drawable/jogging1" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="163dp"
        android:layout_height="127dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="See Your Smart Program"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/seeyourprogram"
        android:layout_width="337dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

</androidx.constraintlayout.widget.ConstraintLayout>