<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/supplement"
        android:layout_width="375dp"
        android:layout_height="148dp"
        android:background="@drawable/rectangle1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/supplement1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/workout"
        android:layout_width="375dp"
        android:layout_height="148dp"
        android:background="@drawable/rectangle1"
        android:fontFamily="@font/inter_bold"
        android:foregroundTintMode="screen"
        android:gravity="center"
        android:text="@string/workout1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/informative"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageView
        android:id="@+id/backarrow8"
        android:layout_width="29dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/arrow2" />

    <TextView
        android:id="@+id/nutrition"
        android:layout_width="375dp"
        android:layout_height="148dp"
        android:background="@drawable/rectangle1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/nutrition1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/neverstop"
        android:textColor="#FF3D00"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:rotation="135"
        app:layout_constraintBottom_toBottomOf="@+id/workout"
        app:layout_constraintEnd_toEndOf="@+id/workout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/workout"
        app:layout_constraintTop_toTopOf="@+id/workout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dumbell" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="57dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="@+id/supplement"
        app:layout_constraintEnd_toEndOf="@+id/supplement"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="@+id/supplement"
        app:layout_constraintTop_toTopOf="@+id/supplement"
        app:layout_constraintVertical_bias="0.558"
        app:srcCompat="@drawable/pill" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="67dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/nutrition"
        app:layout_constraintEnd_toEndOf="@+id/nutrition"
        app:layout_constraintHorizontal_bias="0.129"
        android:background="@drawable/rectangle1"
        app:layout_constraintStart_toStartOf="@+id/nutrition"
        app:layout_constraintTop_toTopOf="@+id/nutrition"
        app:layout_constraintVertical_bias="0.487"
        app:srcCompat="@drawable/apple" />

</androidx.constraintlayout.widget.ConstraintLayout>